--- a/contact.html
+++ b/contact.html
@@ -43,6 +43,7 @@
                 <a href="portfolio.html" class="btn btn-primary">Portfolio</a>
                 <a href="https://github.com/ChefJayPeek" class="btn btn-primary">Git Hub</a>
                 <a href="https://www.linkedin.com/in/jay-peek-ab675a155/" class="btn btn-primary">LinkedIn</a>
+                <a href="assets/JayPeekResumeNov2020.pdf" class="btn btn-primary">Resume</a>
               </div>
             </div>
           </div>
