--- a/portfolio.html
+++ b/portfolio.html
@@ -35,10 +35,14 @@
             <div class = "row">
                 <div class = "col-md-4">
                   <div class = "thumbnail">
-                    <a href="https://chefjaypeek.github.io/petResume/index.html">
+                    <!-- <a href="https://chefjaypeek.github.io/petResume/index.html"> -->
                       <img alt="Thumbnail screenshot image Pet Resume" src="assets/petResumeThumb.png" class="m-2">
                       <div class = "caption">
                         <p class = "text-center text-light">Pet Resume, a website to help you pick a dog breed.</p>
+                        <div class = "d-inline-block container-flex pl-5">
+                          <a href="https://github.com/ChefJayPeek/petResume" class="btn btn-primary text-center">GitHub Repo</a>
+                          <a href="https://chefjaypeek.github.io/petResume/index.html" class="btn btn-primary">Live Page</a>
+                        </div>  
                       </div>
                     </a>
 
@@ -50,6 +54,10 @@
                       <img alt="Thumbnail screenshot image Weather Dashboardd" src="assets/weatherDashboardThumb.png" class="m-2">
                       <div class = "caption">
                         <p class = "text-center text-light">Weather Dashboard, a simple weather forecast.</p>
+                        <div class = "d-inline-block container-flex pl-5">
+                          <a href="https://github.com/ChefJayPeek/weatherDashboard" class="pl-5 btn btn-primary text-center">GitHub Repo</a>
+                          <a href="https://chefjaypeek.github.io/weatherDashboard/" class="btn btn-primary">Live Page</a>
+                        </div>
                       </div>
                     </a>
 
@@ -58,9 +66,13 @@
                 <div class = "col-md-4">
                   <div class = "thumbnail">
                     <a href="https://chefjaypeek.github.io/work_day_scheduler/index.html">
-                      <img alt="Thumbnail screenshot image Workday Scheduler" src="assets/workDaySchedulerThumb.png" class="m-2">
+                      <img alt="Thumbnail screenshot image Burger" src="assets/burgerScreenShotThumb.png" class="m-2">
                       <div class = "caption">
-                        <p class = "text-center text-light">Workday Scheduler, a simply planner for workday tasks.</p>
+                        <p class = "text-center text-light">Eat-Da-Burger!</p>
+                        <div class = "d-inline-block container-flex pl-5">
+                          <a href="https://github.com/ChefJayPeek/burger" class="btn btn-primary text-center">GitHub Repo</a>
+                          <a href="https://pacific-reef-78929.herokuapp.com" class="btn btn-primary">Live Page</a>
+                        </div>  
                       </div>
                     </a>
 
