Updated portfolio with new projects and buttons, and added resume button to contact page

--- a/portfolio.html
+++ b/portfolio.html
@@ -29,16 +29,16 @@
         </div>
       </nav>
       <!-- portfolio thumbnail images with links to completed projects will go here.-->
-      <div class="d-inline-block container-flex bg-secondary mt-5 mx-3 pl-2 pr-5">
+      <div class="d-inline-block container-xl bg-secondary mt-5 mx-3 pl-2 pr-5">
         <h1 class="display-4">Portfolio</h1>
         <hr>
             <div class = "row">
-                <div class = "col-md-4">
-                  <div class = "thumbnail">
-                    <!-- <a href="https://chefjaypeek.github.io/petResume/index.html"> -->
+                <div class = "col-lg-6">
+                  <div class = "thumbnail container-med">
+                    <a href="https://chefjaypeek.github.io/petResume/index.html">
                       <img alt="Thumbnail screenshot image Pet Resume" src="assets/petResumeThumb.png" class="m-2">
                       <div class = "caption">
-                        <p class = "text-center text-light">Pet Resume, a website to help you pick a dog breed.</p>
+                        <p class = "text-light">Pet Resume, a website to help you pick a dog breed.</p>
                         <div class = "d-inline-block container-flex pl-5">
                           <a href="https://github.com/ChefJayPeek/petResume" class="btn btn-primary text-center">GitHub Repo</a>
                           <a href="https://chefjaypeek.github.io/petResume/index.html" class="btn btn-primary">Live Page</a>
@@ -48,12 +48,12 @@
 
                   </div>
                 </div>
-                <div class = "col-md-4">
-                  <div class = "thumbnail">
+                <div class = "col-lg-6">
+                  <div class = "thumbnail container-med">
                     <a href="https://chefjaypeek.github.io/weatherDashboard/index.html">
                       <img alt="Thumbnail screenshot image Weather Dashboardd" src="assets/weatherDashboardThumb.png" class="m-2">
                       <div class = "caption">
-                        <p class = "text-center text-light">Weather Dashboard, a simple weather forecast.</p>
+                        <p class = "pl-2 text-light">Weather Dashboard, a simple weather forecast.</p>
                         <div class = "d-inline-block container-flex pl-5">
                           <a href="https://github.com/ChefJayPeek/weatherDashboard" class="pl-5 btn btn-primary text-center">GitHub Repo</a>
                           <a href="https://chefjaypeek.github.io/weatherDashboard/" class="btn btn-primary">Live Page</a>
@@ -63,12 +63,12 @@
 
                   </div>
                 </div>
-                <div class = "col-md-4">
-                  <div class = "thumbnail">
-                    <a href="https://chefjaypeek.github.io/work_day_scheduler/index.html">
+                <div class = "col-lg-6">
+                  <div class = "thumbnail container-med">
+                    <a href="https://pacific-reef-78929.herokuapp.com">
                       <img alt="Thumbnail screenshot image Burger" src="assets/burgerScreenShotThumb.png" class="m-2">
                       <div class = "caption">
-                        <p class = "text-center text-light">Eat-Da-Burger!</p>
+                        <p class = "pl-5 text-light">     Eat-Da-Burger! A MVC app.</p>
                         <div class = "d-inline-block container-flex pl-5">
                           <a href="https://github.com/ChefJayPeek/burger" class="btn btn-primary text-center">GitHub Repo</a>
                           <a href="https://pacific-reef-78929.herokuapp.com" class="btn btn-primary">Live Page</a>
@@ -79,10 +79,21 @@
                   </div>
                 </div>
 
+                <div class = "col-lg-6">
+                  <div class = "thumbnail container-med">
+                    <a href="https://github.com/HananYusuf/Projectect2">
+                      <img alt="Thumbnail screenshot image Burger" src="assets/burgerScreenShotThumb.png" class="m-2">
+                      <div class = "caption">
+                        <p class = "text-center text-light">Asset Tracker</p>
+                        <div class = "d-inline-block container-flex pl-5">
+                          <a href="https://github.com/HananYusuf/Projectect2" class="btn btn-primary text-center">GitHub Repo</a>
+                          <a href="https://arcane-basin-49331.herokuapp.com" class="btn btn-primary">Live Page</a>
+                        </div>  
+                      </div>
+                    </a>
 
-                <!-- <img alt="Portfolio image 4" src="https://via.placeholder.com/350" class="float-left m-2">
-                <img alt="Portfolio image 5" src="https://via.placeholder.com/350" class="float-left m-2">
-                <img alt="Portfolio image 6" src="https://via.placeholder.com/350" class="float-left m-2"> -->
+                  </div>
+                </div>
             </div>      
 
       </div>
