updated readme and screenshots

--- a/portfolio.html
+++ b/portfolio.html
@@ -81,10 +81,10 @@
 
                 <div class = "col-lg-6">
                   <div class = "thumbnail container-med">
-                    <a href="https://github.com/HananYusuf/Projectect2">
-                      <img alt="Thumbnail screenshot image Burger" src="assets/burgerScreenShotThumb.png" class="m-2">
+                    <a href="https://arcane-basin-49331.herokuapp.com/login">
+                      <img alt="Thumbnail screenshot image assetTracker" src="assets/assetTrackerThumb.png" class="m-2">
                       <div class = "caption">
-                        <p class = "text-center text-light">Asset Tracker</p>
+                        <p class = "pl-4 text-light">Asset Tracker. A multiuser asset tracker.</p>
                         <div class = "d-inline-block container-flex pl-5">
                           <a href="https://github.com/HananYusuf/Projectect2" class="btn btn-primary text-center">GitHub Repo</a>
                           <a href="https://arcane-basin-49331.herokuapp.com" class="btn btn-primary">Live Page</a>
